--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_simple.html" %}
 
 {% block title %}Dashboard - GridTrader Pro{% endblock %}
 {% block page_title %}Dashboard{% endblock %}
