--- a/templates/register.html
+++ b/templates/register.html
@@ -46,7 +46,7 @@
         </div>
         
         <div class="mt-4">
-            <a href="/auth/google" 
+            <a href="/api/auth/google" 
                class="w-full flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50">
                 Sign up with Google
             </a>
