--- a/templates/portfolios.html
+++ b/templates/portfolios.html
@@ -38,8 +38,8 @@
                 </div>
                 
                 <div class="mt-4 flex space-x-2">
-                    <a href="/portfolios/{{ portfolio.id }}" class="text-blue-600 hover:text-blue-900 text-sm">View</a>
-                    <a href="/portfolios/{{ portfolio.id }}/edit" class="text-gray-600 hover:text-gray-900 text-sm">Edit</a>
+                    <a href="/portfolios/{{ portfolio.id }}" class="text-blue-600 hover:text-blue-900 text-sm font-medium">View Details</a>
+                    <a href="/portfolios/{{ portfolio.id }}/add-transaction" class="text-green-600 hover:text-green-900 text-sm font-medium">Add Transaction</a>
                 </div>
             </div>
         </div>
