--- a/templates/stock_analysis.html
+++ b/templates/stock_analysis.html
@@ -123,7 +123,7 @@
                     </div>
                     <div class="flex justify-between">
                         <span class="text-sm text-gray-600">Dividend Yield:</span>
-                        <span class="text-sm font-medium">{{ "%.2f%"|format((company_info.dividendYield or 0) * 100) }}</span>
+                        <span class="text-sm font-medium">{{ "%.2f%%".format((company_info.dividendYield or 0) * 100) }}</span>
                     </div>
                 </div>
             </div>
